# QtVcodec

./: .gitignore  AGENTS.md  CMakeLists.txt  CodingRules.md  DebugCrash.sh  README.md  build.sh  playOutput.sh  run.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
codecs/: Qv2Codecs.puml
codecs/Qv2Core/: Qv2Buffer.h  Qv2Component.h  Qv2ComponentFactory.cpp  Qv2Core.puml  Qv2Errors.h  Qv2Params.h  Qv2Work.h
codecs/apv/: oapv_app_y4m.h
codecs/apv/dec/: C2ApvDec.cpp  C2ApvDec.h  Qv2ApvDecoder.cpp  Qv2ApvDecoder.h
codecs/apv/enc/: C2ApvEnc.cpp  C2ApvEnc.h  Qv2ApvEncoder.cpp  Qv2ApvEncoder.h
codecs/bases/: C2Component.cpp  C2Component.h  Qv2Buffer.h  Qv2Component.h  Qv2Errors.h  Qv2Work.h
codecs/hevc/dec/: Qv2HevcDecoder.cpp  Qv2HevcDecoder.h
codecs/hevc/enc/: Qv2HevcEncoder.cpp  Qv2HevcEncoder.h
codecs/tests/: CMakeLists.txt  Qv2ComponentBaseTests.cpp  Qv2EncoderTests.cpp  README.md  TestUtils.h  testMain.cpp
codecs/tests/testWorkSpace/: genEncoderInputs.sh  oapv_app_dec  playOutput.sh  runTest.sh
inc/Qv2Core/: Qv2Buffer.h  Qv2Component.h  Qv2ComponentFactory.cpp  Qv2ComponentFactory.h  Qv2Constants.h  Qv2Core.puml  Qv2Log.h  Qv2Metadata.h  Qv2Params.h  Qv2Work.h  README.md
outputs/tests/: genEncoderInputs.sh
readers/: Y4MExtractor.cpp  Y4MExtractor.h  oapv_app_util.h
readers/implements/: Y4MSource.cpp  Y4MSource.h  YUVSource.cpp  YUVSource.h
readers/interfaces/: Qv2Source.h
readers/tests/: CMakeLists.txt  Qv2SourceTest.cpp  Y4MSourceTest.cpp  YUVSourceTest.cpp
readers/tests/raw/: generate_test_output.sh
renderers/: VideoController.cpp  VideoController.h  VideoGLWidget.cpp  VideoGLWidget.h  VideoRenderer.cpp  VideoRenderer.h  Y4MExtractor.cpp  Y4MExtractor.h
renderers/implements/: Program.h  VideoRenderer.cpp  VideoRenderer.h
renderers/interfaces/: Qv2Renderer.h  VideoGLWidget.h
renderers/tests/: CMakeLists.txt  Qv2RendererTest.cpp
src/: main.cpp
ui/: mainwindow.h  mainwindow.ui
ui/helpers/: QTLogger.cpp  QTLogger.h
ui/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/viewmodels/: EncoderTabViewModel.cpp  EncoderTabViewModel.h  EncoderViewModel.cpp  EncoderViewModel.h
